--- a/package.json
+++ b/package.json
@@ -168,5 +168,8 @@
     "nth-check": "^2.0.1",
     "undici": "^5.8.0",
     "pkg-fetch": "https://github.com/aws-amplify/pkg-fetch#ad4a21feb533d338bf951e7ba28cea7256aedeff"
+  },
+  "volta": {
+    "node": "18.20.3"
   }
 }
